; ModuleID = '/home/carl/AnghaBench/git/extr_serve.c_is_valid_capability.c'
source_filename = "/home/carl/AnghaBench/git/extr_serve.c_is_valid_capability.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.protocol_capability = type { i64 (i32, i32*)* }

@the_repository = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @is_valid_capability to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_valid_capability(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.protocol_capability*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call %struct.protocol_capability* @get_capability(i8* %4)
  store %struct.protocol_capability* %5, %struct.protocol_capability** %3, align 8
  %6 = load %struct.protocol_capability*, %struct.protocol_capability** %3, align 8
  %7 = icmp ne %struct.protocol_capability* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load %struct.protocol_capability*, %struct.protocol_capability** %3, align 8
  %10 = getelementptr inbounds %struct.protocol_capability, %struct.protocol_capability* %9, i32 0, i32 0
  %11 = load i64 (i32, i32*)*, i64 (i32, i32*)** %10, align 8
  %12 = load i32, i32* @the_repository, align 4
  %13 = call i64 %11(i32 %12, i32* null)
  %14 = icmp ne i64 %13, 0
  br label %15

15:                                               ; preds = %8, %1
  %16 = phi i1 [ false, %1 ], [ %14, %8 ]
  %17 = zext i1 %16 to i32
  ret i32 %17
}

declare dso_local %struct.protocol_capability* @get_capability(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
